--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong> 18 ❤️ </strong>
+                        <strong> ❤️ </strong>
                         <p>
                             Padhate padhate thakajaavato hame se bhee baat karliya karo ❤️. 
  
+                        </p>
+                        <p> 
+                        Ani milxa vane BB ra URT ko project ne yeso. 
                         </p>
                     </div>
                 </div>
