--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                     <div class="text">
                         <strong> ❤️ </strong>
                         <p>
-                            Padhate padhate thakajaavato hame se bhee baat karliya karo ❤️. 
+                             BB ra URT ko Project Pathauna milxa ki ❤️. 
  
                         </p>
                         <p> 
-                        Ani milxa vane BB ra URT ko project ne yeso. 
+                       
                         </p>
                     </div>
                 </div>
